--- a/script/AnsibleDevSetup/playbooks/setup_dev_environment.yml
+++ b/script/AnsibleDevSetup/playbooks/setup_dev_environment.yml
@@ -6,3 +6,7 @@
     - name: Include the git role
       include_role:
         name: git
+
+    - name: Include the node role
+      include_role:
+        name: node
