--- a/script/AnsibleDevSetup/playbooks/roles/node/tasks/main.yml
+++ b/script/AnsibleDevSetup/playbooks/roles/node/tasks/main.yml
@@ -12,19 +12,28 @@
         name: node
         state: present
 
+- name: Mac OS | Intall npm
+  block:
+    - name: Intall npm
+      when: "'Darwin' in os_result.stdout"
+      homebrew:
+        name: npm
+        state: present
+
 # roles/node/tasks/main.yml
 
 - name: Linux | Install Node.js and npm on Debian using apt
   block:
-    - name: Add Node.js repository on Debian
-      when: "'Linux' in os_result.stdout"
-      apt_repository:
-        repo: "deb https://deb.nodesource.com/node_{{ nodejs_version }} {{ ansible_distribution_release }} main"
-        state: present
-        filename: "nodesource.list"
-
     - name: Install Node.js and npm on Debian
       when: "'Linux' in os_result.stdout"
       apt:
         name: nodejs
+        state: present
+
+- name: Linux | Install npm on Debian using apt
+  block:
+    - name: Install npm on Debian
+      when: "'Linux' in os_result.stdout"
+      apt:
+        name: npm
         state: present
